added links and edited some elements

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       </div>
     </div>
     <!--Portfolio Section - Skills-->
-    <div class="container-fluid p-5" id="portfolio_skills_container">
+    <div class="container-fluid" id="portfolio_skills_container">
       <h1 id="section_title">Portfolio</h1>
       <div class="row">
         <div id="left" class="col-sm-12 col-md-12 col-lg-6">
@@ -210,7 +210,7 @@
       </div>
     </div>
     <!--Portfolio Section - Experience-->
-    <div class="container-fluid pt-0 p-5" id="portfolio_experience_container">
+    <div class="container-fluid" id="portfolio_experience_container">
       <div class="row">
         <div id="left" class="col-xl-6 col-lg-6 col-sm-12">
           <h1>Experience</h1>
@@ -299,10 +299,19 @@
       </div>
       <h3>&copy 2022 Mark Baguio. All rights reserved.</h3>
       <div class="icon_container">
-        <a href=""><i class="fa-brands fa-facebook"></i></a>
-        <a href=""><i class="fa-brands fa-youtube"></i></a>
-        <a href=""><i class="fa-brands fa-twitter"></i></a>
-        <a href=""><i class="fa-brands fa-linkedin"></i></a>
+        <a target="_blank" href="https://www.facebook.com/markbaguio0912"
+          ><i class="fa-brands fa-facebook"></i
+        ></a>
+        <a
+          target="_blank"
+          href="https://www.youtube.com/playlist?list=PLSDkoOEBHCFsqiXvufpoUBO5GrRrIZHbE"
+          ><i class="fa-brands fa-youtube"></i
+        ></a>
+        <a
+          target="_blank"
+          href="https://www.linkedin.com/in/baguio-mark-godwin-c/"
+          ><i class="fa-brands fa-linkedin"></i
+        ></a>
       </div>
     </div>
   </footer>
