--- a/page2/page2_explore.html
+++ b/page2/page2_explore.html
@@ -90,9 +90,19 @@
       </div>
       <h3>All rights reserved. 2022</h3>
       <div class="icon_container">
-        <a href=""><i class="fa-brands fa-facebook"></i></a>
-        <a href=""><i class="fa-brands fa-youtube"></i></a>
-        <a href=""><i class="fa-brands fa-twitter"></i></a>
+        <a target="_blank" href="https://www.facebook.com/markbaguio0912"
+          ><i class="fa-brands fa-facebook"></i
+        ></a>
+        <a
+          target="_blank"
+          href="https://www.youtube.com/playlist?list=PLSDkoOEBHCFsqiXvufpoUBO5GrRrIZHbE"
+          ><i class="fa-brands fa-youtube"></i
+        ></a>
+        <a
+          target="_blank"
+          href="https://www.linkedin.com/in/baguio-mark-godwin-c/"
+          ><i class="fa-brands fa-linkedin"></i
+        ></a>
       </div>
     </div>
   </footer>
