edited the random dog button edited the height of the video

--- a/page2/page2_explore.html
+++ b/page2/page2_explore.html
@@ -1,3 +1,11 @@
+<!--
+  Mark Godwin C. Baguio
+  BS CPE - 4B
+  Web Engineering 
+  Final Exam
+  May 22, 2022
+  Portfolio Website
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -78,7 +86,8 @@
       </div>
       <p>Click the button to generate a random image of a dog.</p>
       <button id="call_api_button" class="btn btn-outline-light">
-        <p>Random Dog</p>
+        <!-- <p>Random Dog</p> -->
+        <a>Random Dog</a>
       </button>
     </div>
   </body>
