--- a/page3/page3_media.html
+++ b/page3/page3_media.html
@@ -1,3 +1,11 @@
+<!--
+  Mark Godwin C. Baguio
+  BS CPE - 4B
+  Web Engineering 
+  Final Exam
+  May 22, 2022
+  Portfolio Website
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
